--- a/package.json
+++ b/package.json
@@ -45,6 +45,9 @@
     "swagger-ui-express": "^5.0.1",
     "typeorm": "^0.3.25"
   },
+  "engines": {
+    "node": ">=20.0.0"
+  },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.18.0",
