--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "docs:generate": "nest start --entryFile swagger-generator",
-    "docs:serve": "npm run start:dev"
+    "docs:serve": "npm run start:dev",
+    "install:prod": "npm install --production=false"
   },
   "dependencies": {
     "@nestjs/axios": "^4.0.1",
-    "@nestjs/bull": "^11.0.2",
+    // "@nestjs/bull": "^11.0.2",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
@@ -35,7 +36,7 @@
     "@nestjs/swagger": "^11.2.0",
     "@nestjs/typeorm": "^11.0.0",
     "axios": "^1.10.0",
-    "bull": "^4.16.5",
+    // "bull": "^4.16.5",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "node-cron": "^4.2.1",
